tests/baselines/reference/augmentedTypeAssignmentCompatIndexSignature(strict=true).errors.txt
augmentedTypeAssignmentCompatIndexSignature.ts(1,17): error TS7008: Member 'a' implicitly has an 'any' type.
augmentedTypeAssignmentCompatIndexSignature.ts(2,17): error TS7008: Member 'b' implicitly has an 'any' type.
augmentedTypeAssignmentCompatIndexSignature.ts(19,5): error TS2322: Type '() => void' is not assignable to type '{ [n: number]: Bar; }'.
  Index signature for type 'number' is missing in type '() => void'.


==== augmentedTypeAssignmentCompatIndexSignature.ts (3 errors) ====
    interface Foo { a }
                    ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
    interface Bar { b }
                    ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
    
    interface Object {
        [n: number]: Foo;
    }
    
    interface Function {
        [n: number]: Bar;
    }
    
    var o = {};
    var f = () => { };
    
    var v1: {
        [n: number]: Foo
    } = o; // Should be allowed
    
    var v2: {
        ~~
!!! error TS2322: Type '() => void' is not assignable to type '{ [n: number]: Bar; }'.
!!! error TS2322:   Index signature for type 'number' is missing in type '() => void'.
        [n: number]: Bar
    } = f; // Should be allowed